Started adding support for custom stats.