@@ -6,70 +6,58 @@ import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
 import net.md_5.bungee.api.ChatColor;
 
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @Getter
-public enum StatType {
-    HEALTH("Health",
-            "❤",
-            ChatColor.RED, 100)
-    ,DEFENSE("Defense",
-            "❈",
-            ChatColor.GREEN),
-    MANA("Mana",
-            "✎",
-            ChatColor.AQUA, 100),
-    INTELLIGENCE("Intelligence",
-            "✎",
-            ChatColor.AQUA, 100),
-    MAGIC_FIND("Magic Find",
-            "✯",
-            ChatColor.AQUA, 0, ChatColor.AQUA),
-    SPEED("Speed",
-            "✦",
-            ChatColor.WHITE, 100),
-    DAMAGE("Damage", "❁", ChatColor.RED, 0, ChatColor.RED)
-    ,STRENGTH("Strength",
-            "❁",ChatColor.RED, 0, ChatColor.RED)
-    ,CRIT_DAMAGE("Crit Damage",
-            "☠",
-            ChatColor.BLUE, 0, ChatColor.RED)
-    ,CRIT_CHANCE("Crit Chance",
-            "☣",
-            ChatColor.BLUE, 0, ChatColor.RED),
-    ATTACK_SPEED("Attack Speed", "⚔",
-            ChatColor.YELLOW, 0, ChatColor.YELLOW)
-    ,ABILITY_DAMAGE("Ability Damage",
-            "๑",
-            ChatColor.RED, 0, ChatColor.RED)
-    ,MINING_SPEED("Mining Speed",
-            "⸕",
-            ChatColor.GOLD, 0, ChatColor.GOLD)
-    ,MINING_FORTUNE("Mining Fortune",
-            "☘",
-            ChatColor.GOLD, 0, ChatColor.GOLD),
-    MINING_POWER("Mining Power",
-            "⸕",
-            ChatColor.GOLD, 0, ChatColor.GOLD),
-    MINING_HAMMER("Hammer",
-            "⛏",
-            ChatColor.GOLD, 0, ChatColor.GOLD);
+public class StatType {
+    private static final Map<String, StatType> stats = new HashMap<>();
+
+    static {
+        // Register default stats
+        register("HEALTH", new StatType("Health", "❤", ChatColor.RED, 100, ChatColor.RED));
+        register("DEFENSE", new StatType("Defense", "❈", ChatColor.GREEN, 0, ChatColor.GREEN));
+        register("MANA", new StatType("Mana", "✎", ChatColor.AQUA, 100, ChatColor.AQUA));
+        register("INTELLIGENCE", new StatType("Intelligence", "✎", ChatColor.AQUA, 100, ChatColor.AQUA));
+        register("MAGIC_FIND", new StatType("Magic Find", "✯", ChatColor.AQUA, 0, ChatColor.AQUA));
+        register("SPEED", new StatType("Speed", "✦", ChatColor.WHITE, 100, ChatColor.WHITE));
+        register("DAMAGE", new StatType("Damage", "❁", ChatColor.RED, 0, ChatColor.RED));
+        register("STRENGTH", new StatType("Strength", "❁", ChatColor.RED, 0, ChatColor.RED));
+        register("CRIT_DAMAGE", new StatType("Crit Damage", "☠", ChatColor.BLUE, 0, ChatColor.RED));
+        register("CRIT_CHANCE", new StatType("Crit Chance", "☣", ChatColor.BLUE, 0, ChatColor.RED));
+        register("ATTACK_SPEED", new StatType("Attack Speed", "⚔", ChatColor.YELLOW, 0, ChatColor.YELLOW));
+        register("ABILITY_DAMAGE", new StatType("Ability Damage", "๑", ChatColor.RED, 0, ChatColor.RED));
+        register("MINING_SPEED", new StatType("Mining Speed", "⸕", ChatColor.GOLD, 0, ChatColor.GOLD));
+        register("MINING_FORTUNE", new StatType("Mining Fortune", "☘", ChatColor.GOLD, 0, ChatColor.GOLD));
+        register("MINING_POWER", new StatType("Mining Power", "⸕", ChatColor.GOLD, 0, ChatColor.GOLD));
+        register("MINING_HAMMER", new StatType("Hammer", "⛏", ChatColor.GOLD, 0, ChatColor.GOLD));
+    }
+
+    public static final StatType HEALTH = stats.get("HEALTH");
+    public static final StatType DEFENSE = stats.get("DEFENSE");
+    public static final StatType MANA = stats.get("MANA");
+    public static final StatType INTELLIGENCE = stats.get("INTELLIGENCE");
+    public static final StatType MAGIC_FIND = stats.get("MAGIC_FIND");
+    public static final StatType SPEED = stats.get("SPEED");
+    public static final StatType DAMAGE = stats.get("DAMAGE");
+    public static final StatType STRENGTH = stats.get("STRENGTH");
+    public static final StatType CRIT_DAMAGE = stats.get("CRIT_DAMAGE");
+    public static final StatType CRIT_CHANCE = stats.get("CRIT_CHANCE");
+    public static final StatType ATTACK_SPEED = stats.get("ATTACK_SPEED");
+    public static final StatType ABILITY_DAMAGE = stats.get("ABILITY_DAMAGE");
+    public static final StatType MINING_SPEED = stats.get("MINING_SPEED");
+    public static final StatType MINING_FORTUNE = stats.get("MINING_FORTUNE");
+    public static final StatType MINING_POWER = stats.get("MINING_POWER");
+    public static final StatType MINING_HAMMER = stats.get("MINING_HAMMER");
+
     private final String name;
     private final String icon;
     private final ChatColor color;
     private final double base;
     private final ChatColor loreColor;
 
-    StatType(String name, String icon, ChatColor color) {
-        this(name, icon, color, 0.0);
-    }
-
-    StatType(String name, String icon, ChatColor color, double base) {
-        this(name, icon, color, base, ChatColor.GREEN);
-    }
-
-    StatType(String name, String icon, ChatColor color, double base, ChatColor loreColor) {
+    public StatType(String name, String icon, ChatColor color, double base, ChatColor loreColor) {
         this.name = name;
         this.icon = icon;
         this.color = color;
@@ -77,16 +65,32 @@ public enum StatType {
         this.loreColor = loreColor;
     }
 
+    public static StatType valueOf(String key) {
+        StatType statType = stats.get(key.toUpperCase());
+        if (statType == null) {
+            throw new IllegalArgumentException("Stat type " + key + " does not exist!");
+        }
+        return statType;
+    }
+
     public String getFormatName(){
         return color + icon + " " + name;
     }
 
-    public Component getFormatNameComponent() {
-        return LegacyComponentSerializer.legacySection().deserialize(getFormatName());
-    }
-
     public String getColoredName(){
         return color + name;
+    }
+
+    public static void register(String name, StatType statInfo) {
+        stats.put(name.toUpperCase(), statInfo);
+    }
+
+    public static StatType[] values() {
+        return stats.values().toArray(new StatType[0]);
+    }
+
+    public Component getFormatNameComponent() {
+        return LegacyComponentSerializer.legacySection().deserialize(getFormatName());
     }
 
     public static List<StatType> getStats(){
@@ -94,6 +98,11 @@ public enum StatType {
     }
 
     public static List<String> names(){
-        return getStats().stream().map(StatType::name).collect(Collectors.toList());
+        return stats.keySet().stream().toList();
+    }
+
+
+    public String name() {
+        return this.name.toUpperCase();
     }
 }
